language-puppet (1.4.3) artful; urgency=medium
  * Add the `dirname` stdlib function.
  * Add validate_cmd param to concat.

language-puppet (1.4.2) artful; urgency=medium
  * Bump upper version bounds for some haskell packages

language-puppet (1.4.1) artful; urgency=medium

  * Add the `with` function.
  * Add the `assert_type` function.
  * Add casting string into integer with Integer("12") (See #255)
  * Add hiera environment layer lookup
  * Change [Puppet 4] empty strings in boolean context are true (See #205).
  * Fix regex variable resolution (See #248).
  * Fix missing fail on extra spaces (See #187)
  * Fix read multiple hierachies in hiera format v5
  * Fix #260, #261, #262, #263

 -- Bartavelle <bartavelle@gmail.com>  Sun, 04 Nov 2018 09:32:48 +0100

language-puppet (1.4.0) xenial; urgency=medium

  * Now supporting megaparsec-7.0.0

 -- Simon Marechal <simon.marechal@edf.fr>  Thu, 06 Sep 2018 11:04:25 +0200

language-puppet (1.3.20.1) xenial; urgency=medium

  * Maintenance release for supporting yaml-0.10.

 -- Simon Marechal <simon.marechal@edf.fr>  Mon, 20 Aug 2018 17:52:52 +0200

language-puppet (1.3.20) xenial; urgency=medium

  * Add `length` as an alias to `size`.
  * Add the `unique` stdlib function.
  * Fix a small problem with `postgresql_acls_to_resources_hash`

 -- Simon Marechal <simon.marechal@edf.fr>  Thu, 02 Aug 2018 14:43:35 +0200

language-puppet (1.3.19.1) xenial; urgency=medium

  * Relaxed yaml version bounds

 -- Simon Marechal <simon.marechal@edf.fr>  Wed, 11 Jul 2018 09:38:28 +0200

language-puppet (1.3.19) xenial; urgency=medium

  * Added prefix and suffix functions (Fix #246)
  * Many travis/GHC fixes

 -- Simon Marechal <simon.marechal@edf.fr>  Thu, 05 Jul 2018 09:36:55 +0200

language-puppet (1.3.17) artful; urgency=medium
  * Loose upperbound for servant to include 0.13
  * Loose upperbound for exceptions to include 0.10.0
  * Fix #241

 -- Simon Marechal <bartavelle@gmail.com> UNRELEASED
