@@ -3,25 +3,27 @@
 $a = 0
 
 $a = {
-  'c' => 1
+  c => 1,
+  d => $x
 }
 
 $a = {
   c => {
-    d => 1,
-    e => $x
+    d => 1
   }
 }
 
-# $a, $b = 0
+$a = $b = 0
 
-# $a, $b = {
-#   c => 1,
-#   e => $x
-# }
+$a = $b = {
+  c => 1,
+  d => $x
+}
 
-# $a = $b = {
-#   c => {
-#     d => 1
-#   }
-# }
+$a = $b = {
+  c => {
+    d => 1
+  }
+}
+
+$a = $b == 0
